test/message/arrow-strict-eval-bare-parameter.out
*%(basename)s:8: SyntaxError: Unexpected identifier
eval => 42
^^^^
SyntaxError: Unexpected identifier
